cmake_minimum_required(VERSION 3.10)

project(maya VERSION 6.40)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_library(clips
	agenda.c
	analysis.c
	argacces.c
	bload.c
	bmathfun.c
	bsave.c
	classcom.c
	classexm.c
	classfun.c
	classinf.c
	classini.c
	classpsr.c
	clsltpsr.c
	commline.c
	constrct.c
	constrnt.c
	crstrtgy.c
	cstrcbin.c
	cstrccom.c
	cstrcpsr.c
	cstrnbin.c
	cstrnchk.c
	cstrnops.c
	cstrnpsr.c
	cstrnutl.c
	default.c
	defins.c
	developr.c
	dffctbin.c
	dffctbsc.c
	dffctdef.c
	dffctpsr.c
	dffnxbin.c
	dffnxexe.c
	dffnxfun.c
	dffnxpsr.c
	dfinsbin.c
	drive.c
	emathfun.c
	engine.c
	environment.c
	envrnbld.c
	evaluation.c
	expression.c
	exprnbin.c
	exprnops.c
	exprnpsr.c
	ExternalFunctions.c
	factbin.c
	factbld.c
	factcom.c
	factfile.c
	factfun.c
	factgen.c
	facthsh.c
	factlhs.c
	factmch.c
	factmngr.c
	factprt.c
	factqpsr.c
	factqury.c
	factrete.c
	factrhs.c
	filecom.c
	filertr.c
	fileutil.c
	generate.c
	genrcbin.c
	genrccom.c
	genrcexe.c
	genrcfun.c
	genrcpsr.c
	globlbin.c
	globlbsc.c
	globlcom.c
	globldef.c
	globlpsr.c
	immthpsr.c
	incrrset.c
	inherpsr.c
	inscom.c
	insfile.c
	insfun.c
	insmngr.c
	insmoddp.c
	insmult.c
	inspsr.c
	insquery.c
	insqypsr.c
	iofun.c
	lgcldpnd.c
	memalloc.c
	miscfun.c
	modulbin.c
	modulbsc.c
	moduldef.c
	modulpsr.c
	modulutl.c
	msgcom.c
	msgfun.c
	msgpass.c
	msgpsr.c
	multifld.c
	multifun.c
	objbin.c
	objrtbin.c
	objrtbld.c
	objrtfnx.c
	objrtgen.c
	objrtmch.c
	parsefun.c
	pattern.c
	pprint.c
	prccode.c
	prcdrfun.c
	prcdrpsr.c
	prdctfun.c
	prntutil.c
	proflfun.c
	reorder.c
	reteutil.c
	retract.c
	router.c
	rulebin.c
	rulebld.c
	rulebsc.c
	rulecom.c
	rulecstr.c
	ruledef.c
	ruledlt.c
	rulelhs.c
	rulepsr.c
	scanner.c
	sortfun.c
	strngfun.c
	strngrtr.c
	symblbin.c
	symbol.c
	sysdep.c
	textpro.c
	tmpltbin.c
	tmpltbsc.c
	tmpltdef.c
	tmpltfun.c
	tmpltlhs.c
	tmpltpsr.c
	tmpltrhs.c
	tmpltutl.c
	userdata.c
	userfunctions.c
	utility.c
	watch.c)
add_library(maya_extensions boost.cc
							functional.cpp
							maya.c)

# TODO express the configurable dependencies in setup.h using CMAKE instead
add_executable(maya cmd/repl/main.c)
target_link_libraries(maya PUBLIC 
	boost_system 
	boost_filesystem 
	clips 
	maya_extensions)
target_include_directories(maya PUBLIC "${PROJECT_SRC_DIR}")
