cmake_minimum_required(VERSION 3.10)

project(maya VERSION 6.40)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_library(clips
        Agenda.c
        Analysis.c
        ArgumentAccess.c
        BinaryLoad.c
        BasicMathFunctions.c
        BinarySave.c
		ClassCommands.c
		ClassExamination.c
		ClassFunctions.c
		ClassInfo.c
		ClassInitialization.c
		ClassParser.c
        clsltpsr.c
        CommandLine.c
        Construct.c
        Constraint.c
        ConflictResolutionStrategy.c
		ConstructBinaryLoadSave.c
		ConstructCommand.c
		ConstructParser.c
		ConstraintBinaryLoadSave.c
		ConstraintChecking.c
		ConstraintOperations.c
		ConstraintParser.c
		ConstraintUtilities.c
        DefaultAttribute.c
        Definstances.c
        Developer.c
		DeffactsBinarySaveLoad.c
		DeffactsBasicCommands.c
		Deffacts.c
		DeffactsParser.c
        dffnxbin.c
        dffnxexe.c
        dffnxfun.c
        dffnxpsr.c
		DefinstancesBinaryLoadSave.c
        Drive.c
        ExtendedMathFunctions.c
        Engine.c
        Environment.c
        EnvironmentBuild.c
        Evaluation.c
        Expression.c
        ExpressionBinary.c
        ExpressionOperations.c
        ExpressionParser.c
        ExternalFunctions.c
		FactBinarySaveLoad.c
		FactBuild.c
		FactCommands.c
		FactLoadSaveRoutines.c
		FactFunctions.c
		FactReteFunctionGeneration.c
		FactHashing.c
		FactLHSPatternParsing.c
		FactMatch.c
		FactManager.c
		FactRetePrintFunctions.c
		FactSetQueriesParser.c
		FactQuery.c
		FactReteAccessFunctions.c
		FactRHSPatternParser.c
        FileCommands.c
        FileRouter.c
        FileUtilities.c
        Generate.c
        genrcbin.c
        genrccom.c
        genrcexe.c
        genrcfun.c
        genrcpsr.c
		DefglobalBinary.c
		DefglobalBasicCommands.c
		DefglobalCommands.c
		Defglobal.c
		DefglobalParser.c
		ImplicitSystemMethodsParsing.c
		IncrementalReset.c
		MultipleInheritanceParser.c
		InstanceCommand.c
		InstanceSaveLoadCommands.c
		InstanceFunctions.c
		InstanceManager.c
		InstanceModifyAndDuplicate.c
		InstanceMultifieldTypeSlot.c
		InstanceParser.c
		InstanceQuery.c
		InstanceSetQueryParser.c
        IOFunctions.c
        LogicalDependencies.c
        MemoryAllocation.c
        MiscFunctions.c
		DefmoduleBinarySaveLoad.c
		DefModuleBasicCommands.c
		Defmodule.c
		DefmoduleParser.c
		DefmoduleUtility.c
		DefmessageHandlerCommands.c
		DefmessageHandlerFunctions.c
		DefmessageHandlerDispatch.c
		DefmessageHandlerParser.c
        Multifield.c
        MultifieldFunctions.c
		ObjectBinaryLoadSave.c
		ObjectReteBinarySaveLoad.c
		ObjectPatternMatcher.c
		InferenceEngineObjectAccessRotuines.c
		InferenceEngineObjectParsingRoutines.c
		ObjectReteMatch.c
        ParsingFunctions.c
        Pattern.c
        PrettyPrint.c
        prccode.c
        prcdrfun.c
        prcdrpsr.c
        PredicateFunctions.c
        PrintUtility.c
        ConstructProfilingFunctions.c
        Reorder.c
        ReteUtility.c
        Retract.c
        Router.c
		RuleBinarySaveLoad.c
		RuleBuild.c
		BasicRuleCommands.c
		RuleCommands.c
		RuleConstraints.c
		Defrule.c
		RuleDelete.c
		RuleLHSParsing.c
		RuleParser.c
        Scanner.c
        SortingFunctions.c
        StringFunctions.c
        StringRouter.c
        SymbolBinarySave.c
        Symbol.c
        SystemDependency.c
        TextProcessing.c
        tmpltbin.c
        tmpltbsc.c
        tmpltdef.c
        tmpltfun.c
        tmpltlhs.c
        tmpltpsr.c
        tmpltrhs.c
        tmpltutl.c
        UserData.c
        UserFunctions.c
        Utility.c
        Watch.c)
add_library(maya_extensions boost.cc
        functional.cpp
        maya.c)

# TODO express the configurable dependencies in setup.h using CMAKE instead
add_executable(maya cmd/repl/main.c)
target_link_libraries(maya PUBLIC
        boost_system
        boost_filesystem
        clips
        maya_extensions)
target_include_directories(maya PUBLIC "${PROJECT_SRC_DIR}")
